# streamlit-pdf-serializer

./: .gitignore  pyproject.toml  requirements.txt
notebooks/: bbox_lab.py  final.py  layoutlm-document-qa.py
src/: config.json  main.py
src/classes/: InvoiceDocument.py  InvoiceDocumentParser.py
streamlit/: main.py
streamlit/model_managers/: tesseract.py
streamlit/models/: azure.py  olmocr.py  tesseract.py
