[project]
name = "facture-microdata"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9.21"
dependencies = [
    "accelerate>=1.6.0",
    "marimo>=0.12.4",
    "pdf2image>=1.17.0",
    "pytesseract>=0.3.13",
    "torch<2.6.0",
    "torchvision<0.20.0",
    "transformers>=4.51.0",
    "ultralytics>=8.3.102",
    "langchain>=0.3.23",
    "langchain-ollama>=0.3.0",
    "streamlit>=1.44.1",
    "st-diff-viewer>=1.0.7",
    "timm>=1.0.15",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu" },
]
torchvision = [
  { index = "pytorch-cpu" },
]
