[project]
name = "facture-microdata"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.16"
dependencies = [
    "accelerate>=1.6.0",
    "marimo>=0.12.8",
    "pdf2image>=1.17.0",
    "pytesseract>=0.3.13",
    "torch<2.6.0",
    "torchvision<0.20.0",
    "transformers>=4.51.0",
    "streamlit>=1.44.1",
    "st-diff-viewer>=1.0.7",
    "timm>=1.0.15",
    "langid>=1.1.6",
    "sentence-transformers>=4.0.2",
    "dateparser>=1.2.1",
    "docling-core>=2.26.1",
    "pypdf2>=3.0.1",
    "matplotlib>=3.8,<3.10",
    "altair>=5.5.0",
    "google-generativeai>=0.8.4",
    "pymupdf>=1.25.5",
    "black>=25.1.0",
    "streamlit-pdf-viewer>=0.0.22",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu" },
]
torchvision = [
  { index = "pytorch-cpu" },
]


[tool.setuptools]
package-dir = {"" = "src"}
